MockInterviewPackage/main/default/objects/MI_Question_Pool__c/MI_Question_Pool__c.object-meta.xml
<CustomObject>
    <label>MI Question Pool</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MI Question Pools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>