MockInterviewPackage/main/default/objects/MI_Question_Pool__c/fields/Mock_Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mock Interview ID</label>
    <referenceTo>Mock_Interview_Self__c</referenceTo>
    <relationshipLabel>MI Question Pools</relationshipLabel>
    <relationshipName>MI_Question_Pools</relationshipName>
    <type>Lookup</type>
</CustomField>