MockInterviewPackage/main/default/objects/MI_Question_Pool__c/fields/Suggested_Answer__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Answer__c</fullName>
    <label>Suggested Answer</label>
    <type>TextArea</type>
</CustomField>